--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>TradeGecko Developer Portal</title>
+    <title>QuickBooks Commerce Developer Portal</title>
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -183,6 +183,10 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
+    <div class="site-topbar">
+      <a class="site-topbar__link" target="_blank" href="https://tradegecko.com/blog/tradegecko/acquired-by-intuit">TradeGecko is now QuickBooks Commerce.</a>
+    </div>
+
     <div class="base">
       <div class="base__header">
   <div class="container">
@@ -191,13 +195,12 @@
         <header class='site-header'>
           <div class="site-header__branding col-sm p-0">
             <a href="/" class="site-header__logo" ></a>
-            <a href="/" class="site-header__title" >
-                <strong class="site-header__title--strong">TradeGecko</strong> Developer
+            <a href="/" class="site-header__title" >Developer
             </a>
             <i class="burger fas fa-bars" class="burger"></i>
             <nav>
               <a class="nav-link" href="/">Home</a>
-              <a class="nav-link" href="/docs.html">Docs</a>
+              <a class="nav-link" href="/docs.html">API Docs</a>
               <a class="nav-link" href="https://go.tradegecko.com/apps" target="_blank">App Store</a>
               <a class="nav-link" href="https://github.com/tradegecko/smaug/issues" target="_blank">Community</a>
               <a class="nav-link" href="/changes.html">Changelog</a>
@@ -207,7 +210,7 @@
       </div>
     </div>
   </div>
-  <div style="background:#F4F4F5;padding:10px 20px;border-top: 1px solid #e2e6e8;">
+  <div>
     <div class="container">
       <div class="search-wrapper">
   <div class="search">
@@ -228,14 +231,11 @@
         <div class="home-cta-container">
   <div class="home-cta-wrapper">
     <h1>
-      Build Apps for over 200,000 merchants or just for your own team
+      Build Apps for over 200,000 merchants, or just for your own team
     </h1>
     <div class="home-cta_button-wrapper">
-      <a href="https://go.tradegecko.com/register" target="blank_" class="btn btn-big btn-primary" >
-          Sign Up Now
-      </a>
-      <a href="/docs.html" class="btn btn-outline btn-big" >
-          Explore Docs
+      <a href="/docs.html" class="btn btn-big btn-primary" >
+          Explore API Docs
       </a>
     </div>
   </div>
@@ -246,38 +246,29 @@
 
 <p><div class="row index-page__section">
     <div class="card-list">
-        <div class="study-card" style="background-color: #5784f7 ">
-          <div class="study-card__image-wrapper">
-            <img src="images/eCommerce@2x.png" />
-          </div>
+        <div class="study-card">
           <div class="study-blurb">
-            <h2>Ecommerce Integration Guide</h2>
-            <p>Build a sales channel integration with TradeGecko. Sync orders and products from your online stores and marketplaces.</p>
-            <a href="/guides/sales.html" class="btn btn-big btn-primary card__sticky-button" >
+            <h4>Ecommerce Integration Guide</h4>
+            <p>Build a sales channel integration with QuickBooks Commerce. Sync orders and products from your online stores and marketplaces.</p>
+            <a href="/guides/sales.html" class="plain-link card__sticky-button" >
               Read More
             </a>
           </div>
         </div>
-        <div class="study-card" style="background-color: #5bb4f9 ">
-          <div class="study-card__image-wrapper">
-            <img src="images/3PL@2x.png" />
-          </div>
+        <div class="study-card">
           <div class="study-blurb">
-            <h2>Fulfillment Service Integration Guide</h2>
-            <p>Integrate TradeGecko with a fulfilment service to streamline your 3PL management and shipping workflows.</p>
-            <a href="/guides/3pl.html" class="btn btn-big btn-primary card__sticky-button" >
+            <h4>Fulfillment Service Integration Guide</h4>
+            <p>Integrate QuickBooks Commerce with a fulfilment service to streamline your 3PL management and shipping workflows.</p>
+            <a href="/guides/3pl.html" class="plain-link card__sticky-button" >
               Read More
             </a>
           </div>
         </div>
-        <div class="study-card" style="background-color: #80dce2 ">
-          <div class="study-card__image-wrapper">
-            <img src="images/Warehouse@2x.png" />
-          </div>
+        <div class="study-card">
           <div class="study-blurb">
-            <h2>Warehouse Management Integration Guide</h2>
-            <p>Sync inventory levels between your Warehouse Management System and TradeGecko.</p>
-            <a href="/guides/warehouse.html" class="btn btn-big btn-primary card__sticky-button" >
+            <h4>Warehouse Management Integration Guide</h4>
+            <p>Sync inventory levels between your Warehouse Management System and QuickBooks Commerce.</p>
+            <a href="/guides/warehouse.html" class="plain-link card__sticky-button" >
               Read More
             </a>
           </div>
@@ -286,24 +277,24 @@
   </div></p>
 
 <p><div class="row index-page__section">
-    <h1> Start building with TradeGecko API in minutes...</h1>
+    <h2> Start building with QuickBooks Commerce API in minutes</h2>
   </div></p>
 
-<p><div class="row">
+<p><div class="row index-page__section">
     <div class="card-list">
         <div class="study-card secondary-card">
           <div class="study-blurb">
-            <h2>Comprehensive API Docs</h2>
+            <h4 class="study-card__title">Comprehensive API Docs</h4>
             <p>Build exactly what you need with our modern APIs and webhooks.</p>
             <a href="/docs.html" class="plain-link card__sticky-button" >
-              Explore docs <i class="fa fa-angle-right"></i>
+              Explore API Docs <i class="fa fa-angle-right"></i>
             </a>
           </div>
         </div>
         <div class="study-card secondary-card">
           <div class="study-blurb">
-            <h2>Detailed Guides and Tutorials</h2>
-            <p>TradeGecko’s thorough use cases provide step-by-step instructions to build integrations quickly and easily.</p>
+            <h4 class="study-card__title">Detailed Guides and Tutorials</h4>
+            <p>QuickBooks Commerce&#39;s thorough use cases provide step-by-step instructions to build integrations quickly and easily.</p>
             <a href="/docs.html#guides" class="plain-link card__sticky-button" >
               Explore guides <i class="fa fa-angle-right"></i>
             </a>
@@ -311,29 +302,13 @@
         </div>
         <div class="study-card secondary-card">
           <div class="study-blurb">
-            <h2>Knowledge and Support</h2>
-            <p>Detailed articles and getting started modules covering all areas of the TradeGecko product.</p>
+            <h4 class="study-card__title">Knowledge and Support</h4>
+            <p>Detailed articles and getting started modules covering all areas of the QuickBooks Commerce product.</p>
             <a href="https://support.tradegecko.com" class="plain-link card__sticky-button" >
               Learn more <i class="fa fa-angle-right"></i>
             </a>
           </div>
         </div>
-    </div>
-  </div></p>
-
-<p><div class="row index-page__section">
-    <div class="col-md-1">
-    </div>
-    <div class="col-md-3 become-partner__image">
-    </div>
-    <div class="col-md-7 become-partner__details">
-      <h1> Sign up for a partner account to get started</h1>
-      <p>Discover how our Partner Program can help your clients build the business of their dreams and make you money in the process</p>
-      <a href="https://partners.tradegecko.com/register" target="blank_" class="btn btn-big btn-primary" >
-        Become a partner
-      </a>
-    </div>
-    <div class="col-md-1">
     </div>
   </div>
 </div></p>
@@ -349,15 +324,10 @@
     </a>
 </div>
 <div class="base__footer">
-  <div class="corner-ribbon-bounds corner-ribbon-bounds--loose">
-    <a class="corner-ribbon corner-ribbon--moko" target="_blank" href="https://www.tradegecko.com/jobs">
-      We're Hiring
-    </a>
-  </div>
   <div class="footer-wrapper">
     <div class="container">
       <div class="row">
-          <div class="col-2">
+          <div class="col-3">
           <h4>Company</h4>
             <ul class="link-list">
                 <li><a href="https://www.tradegecko.com/about-us" target="_blank">About us</a></li>
@@ -366,7 +336,7 @@
                 <li><a href="https://www.tradegecko.com/press-kit" target="_blank">Press kit</a></li>
             </ul>
           </div>
-          <div class="col-2">
+          <div class="col-3">
           <h4>Contact</h4>
             <ul class="link-list">
                 <li><a href="https://www.tradegecko.com/contact-us" target="_blank">Contact us</a></li>
@@ -374,7 +344,7 @@
                 <li><a href="https://www.tradegecko.com/contact-us" target="_blank">Visit us</a></li>
             </ul>
           </div>
-          <div class="col-2">
+          <div class="col-3">
           <h4>Getting Help</h4>
             <ul class="link-list">
                 <li><a href="http://support.tradegecko.com" target="_blank">Help Desk</a></li>
@@ -382,7 +352,7 @@
                 <li><a href="https://status.tradegecko.com" target="_blank">Staus</a></li>
             </ul>
           </div>
-          <div class="col-2">
+          <div class="col-3">
           <h4>Partners</h4>
             <ul class="link-list">
                 <li><a href="https://www.tradegecko.com/partners" target="_blank">Become a partner</a></li>
@@ -391,17 +361,6 @@
                 <li><a href="https://developer.tradegecko.com/" target="_blank">Developers & API</a></li>
             </ul>
           </div>
-        <div class="col-4">
-          <a target="_blank" href="https://tradegecko.typeform.com/to/A2ewy0" class="btn btn-big btn-primary" >
-            Subscribe to our newsletter
-          </a>
-          <legend>
-            You'll get useful news from our blog, as well as periodic product update emails. Unsubscribe any time.
-          </legend>
-        </div>
-      </div>
-      <div class="row" style="margin-top: 100px;">
-        <div class="footer-moko">
       </div>
     </div>
   </div>
@@ -409,7 +368,7 @@
 
     </div>
 
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700' rel='stylesheet' type='text/css'>
+    <link href="https://d3ds1rcygteua7.cloudfront.net/assets/fonts/avenir.css" rel="stylesheet">
     <script>
       window.intercomSettings = {
         app_id: "i0krnes0"
