--- a/docs.html
+++ b/docs.html
@@ -12341,6 +12341,7 @@ https://api.tradegecko.com/stock_levels/
         </span><span class="p">}</span><span class="w">
       </span><span class="p">],</span><span class="w">
       </span><span class="s2">&quot;stock_on_hand&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;30&quot;</span><span class="p">,</span><span class="w">
+      </span><span class="s2">&quot;available_stock&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;25&quot;</span><span class="p">,</span><span class="w">
       </span><span class="s2">&quot;incoming_stock&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;0&quot;</span><span class="w">
     </span><span class="p">},</span><span class="w">
     </span><span class="p">{</span><span class="w">
@@ -12355,6 +12356,7 @@ https://api.tradegecko.com/stock_levels/
         </span><span class="p">}</span><span class="w">
       </span><span class="p">],</span><span class="w">
       </span><span class="s2">&quot;stock_on_hand&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;75&quot;</span><span class="p">,</span><span class="w">
+      </span><span class="s2">&quot;available_stock&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;75&quot;</span><span class="p">,</span><span class="w">
       </span><span class="s2">&quot;incoming_stock&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;0&quot;</span><span class="w">
     </span><span class="p">}</span><span class="w">
   </span><span class="p">]</span><span class="w">
@@ -12424,6 +12426,7 @@ https://api.tradegecko.com/stock_levels/1
       </span><span class="p">}</span><span class="w">
     </span><span class="p">],</span><span class="w">
     </span><span class="s2">&quot;stock_on_hand&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;30&quot;</span><span class="p">,</span><span class="w">
+    </span><span class="s2">&quot;available_stock&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;25&quot;</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;incoming_stock&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;0&quot;</span><span class="w">
   </span><span class="p">}</span><span class="w">
 </span><span class="p">}</span><span class="w">
@@ -14347,6 +14350,7 @@ https://api.tradegecko.com/variants/
       </span><span class="s2">&quot;default_ledger_account_id&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
       </span><span class="s2">&quot;buy_price&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;4.5&quot;</span><span class="p">,</span><span class="w">
       </span><span class="s2">&quot;committed_stock&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;3&quot;</span><span class="p">,</span><span class="w">
+      </span><span class="s2">&quot;available_stock&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;7&quot;</span><span class="p">,</span><span class="w">
       </span><span class="s2">&quot;incoming_stock&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;0&quot;</span><span class="p">,</span><span class="w">
       </span><span class="s2">&quot;hs_code&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;110100&quot;</span><span class="p">,</span><span class="w">
       </span><span class="s2">&quot;country_of_origin&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;SG&quot;</span><span class="p">,</span><span class="w">
@@ -14402,7 +14406,10 @@ https://api.tradegecko.com/variants/
           </span><span class="s2">&quot;committed&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;3&quot;</span><span class="p">,</span><span class="w">
           </span><span class="s2">&quot;incoming&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
           </span><span class="s2">&quot;bin_location&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
-          </span><span class="s2">&quot;reorder_point&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="w">
+          </span><span class="s2">&quot;reorder_point&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
+          </span><span class="s2">&quot;production_committed&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;0&quot;</span><span class="p">,</span><span class="w">
+          </span><span class="s2">&quot;production_incoming&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;0&quot;</span><span class="p">,</span><span class="w">
+          </span><span class="s2">&quot;available&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;7&quot;</span><span class="w">
         </span><span class="p">}</span><span class="w">
       </span><span class="p">],</span><span class="w">
       </span><span class="s2">&quot;prices&quot;</span><span class="p">:</span><span class="w"> </span><span class="p">{</span><span class="w">
@@ -14480,7 +14487,10 @@ https://api.tradegecko.com/variants/
           </span><span class="s2">&quot;committed&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
           </span><span class="s2">&quot;incoming&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
           </span><span class="s2">&quot;bin_location&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
-          </span><span class="s2">&quot;reorder_point&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="w">
+          </span><span class="s2">&quot;reorder_point&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
+          </span><span class="s2">&quot;production_committed&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;0&quot;</span><span class="p">,</span><span class="w">
+          </span><span class="s2">&quot;production_incoming&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;0&quot;</span><span class="p">,</span><span class="w">
+          </span><span class="s2">&quot;available&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;10&quot;</span><span class="w">
         </span><span class="p">}</span><span class="w">
       </span><span class="p">],</span><span class="w">
       </span><span class="s2">&quot;prices&quot;</span><span class="p">:</span><span class="w"> </span><span class="p">{</span><span class="w">
@@ -14578,6 +14588,7 @@ https://api.tradegecko.com/variants/ -d <span class="s1">&#39;{&quot;variant&quo
     </span><span class="s2">&quot;default_ledger_account_id&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;buy_price&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;4.5&quot;</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;committed_stock&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;3&quot;</span><span class="p">,</span><span class="w">
+    </span><span class="s2">&quot;available_stock&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;7&quot;</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;incoming_stock&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;0&quot;</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;hs_code&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;110100&quot;</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;country_of_origin&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;SG&quot;</span><span class="p">,</span><span class="w">
@@ -14633,7 +14644,10 @@ https://api.tradegecko.com/variants/ -d <span class="s1">&#39;{&quot;variant&quo
         </span><span class="s2">&quot;committed&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;3&quot;</span><span class="p">,</span><span class="w">
         </span><span class="s2">&quot;incoming&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
         </span><span class="s2">&quot;bin_location&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
-        </span><span class="s2">&quot;reorder_point&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="w">
+        </span><span class="s2">&quot;reorder_point&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
+        </span><span class="s2">&quot;production_committed&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;0&quot;</span><span class="p">,</span><span class="w">
+        </span><span class="s2">&quot;production_incoming&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;0&quot;</span><span class="p">,</span><span class="w">
+        </span><span class="s2">&quot;available&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;7&quot;</span><span class="w">
       </span><span class="p">}</span><span class="w">
     </span><span class="p">],</span><span class="w">
     </span><span class="s2">&quot;prices&quot;</span><span class="p">:</span><span class="w"> </span><span class="p">{</span><span class="w">
@@ -14870,6 +14884,7 @@ https://api.tradegecko.com/variants/1
     </span><span class="s2">&quot;default_ledger_account_id&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;buy_price&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;4.5&quot;</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;committed_stock&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;3&quot;</span><span class="p">,</span><span class="w">
+    </span><span class="s2">&quot;available_stock&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;7&quot;</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;incoming_stock&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;0&quot;</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;hs_code&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;110100&quot;</span><span class="p">,</span><span class="w">
     </span><span class="s2">&quot;country_of_origin&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;SG&quot;</span><span class="p">,</span><span class="w">
@@ -14925,7 +14940,10 @@ https://api.tradegecko.com/variants/1
         </span><span class="s2">&quot;committed&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;3&quot;</span><span class="p">,</span><span class="w">
         </span><span class="s2">&quot;incoming&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
         </span><span class="s2">&quot;bin_location&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
-        </span><span class="s2">&quot;reorder_point&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="w">
+        </span><span class="s2">&quot;reorder_point&quot;</span><span class="p">:</span><span class="w"> </span><span class="kc">null</span><span class="p">,</span><span class="w">
+        </span><span class="s2">&quot;production_committed&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;0&quot;</span><span class="p">,</span><span class="w">
+        </span><span class="s2">&quot;production_incoming&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;0&quot;</span><span class="p">,</span><span class="w">
+        </span><span class="s2">&quot;available&quot;</span><span class="p">:</span><span class="w"> </span><span class="s2">&quot;7&quot;</span><span class="w">
       </span><span class="p">}</span><span class="w">
     </span><span class="p">],</span><span class="w">
     </span><span class="s2">&quot;prices&quot;</span><span class="p">:</span><span class="w"> </span><span class="p">{</span><span class="w">
